<resources>
    <string name="app_name">Test App</string>

    <string name="check_internet">Check your internet connection</string>
    <string name="accept_permissions">Accept Permission</string>
    <string name="Please_wait">Please Wait.</string>

    <string name="welcome">Welcome,</string>
    <string name="students">Students!</string>
    <string name="lets_start_learning">Lets Start Learning!</string>
    <string name="need_account">Need an Account?</string>
    <string name="lets_get_you">Lets get you</string>
    <string name="setup">Setup!</string>

    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_confirm_email">Enter Confirm Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>

    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="enter_valid_email">You have entered an invalid Email</string>
    <string name="please_enter_confirm_email">Please Enter Confirm Email</string>
    <string name="email_not_match">Email and confirmation email do not match</string>

    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="enter_valid_password">Password should be minimum 8 characters</string>
    <string name="password_not_match">Password and confirmation password do not match</string>
    <string name="enter_number">Please enter a mobile number</string>
    <string name="enter_valid_number">The mobile number must be 6 to 15 digits</string>

    <string name="login">LOGIN</string>
    <string name="signup">Create New Account</string>
    <string name="submit">SUBMIT</string>
    <string name="next">NEXT</string>
    <string name="your_result">Your Result</string>
    <string name="continue1">Continue</string>

    <string name="your">Your</string>
    <string name="interests">Interests</string>
    <string name="for_better_recommendation">You may select up to 10 topics</string>
    <string name="hello">Hello,</string>
    <string name="generated_by_ai">Generated by AI</string>
    <string name="generate_new_quiz">Generate New Quiz</string>
</resources>